--- a/src/components/products/card.css
+++ b/src/components/products/card.css
@@ -1,7 +1,20 @@
 .product-card {
-    max-width: 12rem;
-    max-height: 17rem;
-    background-color: blueviolet;
+    max-width: 13rem;
+    max-height: 20rem;
+    border: 1px solid #ddd;
+    background-color: white;
+    margin: 1rem;
+    padding: 1rem;
 }
-
+.product-thumb{
+    display: flex;
+    align-items: center;
+    padding: 0.5rem;
+}
+.product-img{
+    height: 11rem;
+    margin: 0 auto;
+    align-items: center;
+    width: fit-content;
+}
 
