--- a/src/components/products/product.css
+++ b/src/components/products/product.css
@@ -1,4 +1,12 @@
 .products-container{
-    display: flex;
-    gap: 2rem
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    padding: 20px;
+}
+
+@media (max-width: 768px) {
+    .container {
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+        gap: 10px;
+    }
 }
