--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,9 @@ body{
     font-family: 'Noto Sans', sans-serif;
 }
 
+h1{
+    font-family: 'Raleway', sans-serif;
+}
 .link{
     text-decoration: none;
     color: inherit;
