--- a/src/components/products/card.css
+++ b/src/components/products/card.css
@@ -1,10 +1,10 @@
 .product-card {
-    max-width: 13rem;
-    max-height: 20rem;
-    border: 1px solid #ddd;
+    display: flex;
+    flex-direction: column;
     background-color: white;
-    margin: 1rem;
-    padding: 1rem;
+    margin: 1.5rem;
+    border-radius: 5px;
+    box-shadow:  0 2px 10px rgba(0, 0, 0, 0.3);;
 }
 .product-thumb{
     display: flex;
@@ -12,9 +12,27 @@
     padding: 0.5rem;
 }
 .product-img{
-    height: 11rem;
+    height: 10rem;
     margin: 0 auto;
-    align-items: center;
     width: fit-content;
 }
+.product-detail{
+    padding:1rem;
+}
 
+.product-detail p{
+    margin : 0.5rem;
+}
+.add-cart-button{
+    display: flex;
+    flex-direction: column;
+    padding: 0px !important;
+    text-align: center;
+    justify-content: center;
+    color: white;
+    height: 3rem;
+    background-color: #BC4639;
+}
+.add-cart-button:hover{
+    cursor: pointer;
+}
