--- a/src/components/products/card.css
+++ b/src/components/products/card.css
@@ -2,9 +2,9 @@
     display: flex;
     flex-direction: column;
     background-color: white;
-    margin: 1.5rem;
+    margin: 1rem;
     border-radius: 5px;
-    box-shadow:  0 2px 10px rgba(0, 0, 0, 0.3);;
+    box-shadow:  0 2px 10px rgba(0, 0, 0, 0.3);
 }
 .product-thumb{
     display: flex;
@@ -32,7 +32,14 @@
     color: white;
     height: 3rem;
     background-color: #BC4639;
+    border: 2px solid #BC4639;
 }
 .add-cart-button:hover{
     cursor: pointer;
+}
+.add-to-cart-after-click{
+    
+    background-color: white;
+    color: #BC4639;
+    transition: 0.2s ease;
 }
