--- a/src/components/products/product.css
+++ b/src/components/products/product.css
@@ -1,7 +1,8 @@
 .products-container{
+    flex: 1;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    padding: 20px;
+    padding: 1rem;
 }
 
 @media (max-width: 768px) {
