--- a/src/components/products/card.css
+++ b/src/components/products/card.css
@@ -3,6 +3,8 @@
     flex-direction: column;
     background-color: white;
     margin: 1rem;
+    height: fit-content;
+    width: fit-content;
     border-radius: 5px;
     box-shadow:  0 2px 10px rgba(0, 0, 0, 0.3);
 }
