--- a/src/components/search/search.css
+++ b/src/components/search/search.css
@@ -1,12 +1,41 @@
+.search-wrapper {
+    display: flex;
+    justify-content: flex-end;
+}
+
 .search-container{
     display: flex;
-    justify-content: end;
-    margin: 1rem 1rem 0 1rem ;
+    width: fit-content;
+    border-radius: 10px;
+    margin: 1.6rem 1.5rem 0 1rem ;
+    height: 2.5rem;;
+    box-shadow:  0 2px 10px rgba(0, 0, 0, 0.3);
 }
+.search-container input,button{
+    border : 0; 
+    padding-left: 10px;
+    border-top-left-radius: 5px; 
+    border-bottom-left-radius: 5px;
+    transition: border-color 0.3s;
+}
+.search-container input:focus{
+    outline: none;
+    border: 2px solid #BC4639
+}
+
 .search-icon{
-    height: 1rem;
-    width: 1rem;
+    height: 1.2rem;
+    width: 1.2rem;
 }
 .search-button{
+    width: 2.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     background-color: #BC4639;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+}
+.search-button:hover{
+    cursor: pointer;
 }
