--- a/src/components/cart/cart.css
+++ b/src/components/cart/cart.css
@@ -1,20 +1,31 @@
-.cart-heading{
+.cart-heading {
     color: #5C2018;
     margin: 4rem;
 }
-.cart-items{
+
+.cart-items {
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    margin-left:10rem;
+    margin-left: 10rem;
 }
-.cart-total{
+
+.cart-total {
     max-width: 25rem;
 }
-.cart-total p{
+
+.cart-total p {
     text-align: center;
 }
-.hr{
-border: 1px solid #BC4639;
-  border-radius: 5px;
+
+.hr {
+    border: 1px solid #BC4639;
+    border-radius: 5px;
+}
+
+.delete-button {
+    background-color: #BC4639;
+    color: white;
+    border-radius: 5px;
+    border: 0;
 }
