--- a/src/components/products/card.css
+++ b/src/components/products/card.css
@@ -16,28 +16,33 @@
 .product-img{
     height: 10rem;
     margin: 0 auto;
-    width: fit-content;
+    max-width: 10rem;
+    width: 100%;
 }
 .product-detail{
     padding:1rem;
 }
 
 .product-detail p{
-    margin : 0.5rem;
+    margin : 0.5rem 0;
 }
 .add-cart-button{
     display: flex;
     flex-direction: column;
-    padding: 0px !important;
+    padding: 0;
     text-align: center;
     justify-content: center;
     color: white;
     height: 3rem;
     background-color: #BC4639;
     border: 2px solid #BC4639;
+    cursor: pointer; 
+    transition: background-color 0.2s ease;
 }
 .add-cart-button:hover{
     cursor: pointer;
+    background-color: #a2382e;
+    color: white;
 }
 .add-to-cart-after-click{
     
